--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "preivate": true,
   "scripts": {
     "check": "npm run test && npm run lint && npm run format",
-    "test": "NODE_ENV=test vusted --output=gtest --pattern=.spec ./lua",
+    "test": "rm /tmp/nvimvusted; NVIM_LISTEN_ADDRESS=/tmp/nvimvusted NODE_ENV=test vusted --output=gtest --pattern=.spec ./lua",
     "lint": "luacheck --codes ./lua",
     "format": "stylua --config-path stylua.toml --glob 'lua/**/*.lua' -- lua",
-    "typecheck": "rm -Rf $(pwd)/tmp/typecheck; lua-language-server --check $(pwd)/lua --configpath=$(pwd)/.luarc.json --logpath=$(pwd)/tmp/typecheck > /dev/null; cat ./tmp/typecheck/check.json 2> /dev/null"
+    "typecheck": "rm -Rf $(pwd)/tmp/typecheck; lua-language-server --check $(pwd)/lua --configpath=$(pwd)/.luarc.typecheck.json --logpath=$(pwd)/tmp/typecheck > /dev/null; cat ./tmp/typecheck/check.json 2> /dev/null"
   }
 }
